--- a/src/sections/ExperienceSection.astro
+++ b/src/sections/ExperienceSection.astro
@@ -48,7 +48,7 @@ const experienceData = {
     buttonText: "View Full Experience"
 };
 ---
-<section class="min-h-screen px-8 py-16">
+<section id="experience" class="min-h-screen px-8 py-16">
     <div class="max-w-7xl mx-auto">
         <div class="flex flex-col lg:flex-row items-start lg:items-center justify-between gap-12 lg:gap-16">
             <div class="flex flex-col w-full lg:w-[60%]">
